# tenga-proxy

./: .gitignore  Makefile  README.md  build_appimage.sh  cli.py  gui.py  install.sh  install_appimage.sh  pyproject.toml  requirements.txt  setup.sh
assets/: tenga-proxy.desktop
core/scripts/: build_appimage.sh  bump_version.sh  install_appimage.sh  install_dev.sh  setup.sh
src/: __init__.py
src/core/: __init__.py  config.py  context.py  logging_utils.py  monitor.py  singbox_manager.py  xray_manager.py
src/db/: __init__.py  config.py  data_store.py  profiles.py
src/fmt/: __init__.py  base.py  parsers.py  stream.py
src/fmt/protocols/: __init__.py  shadowsocks.py  socks_http.py  trojan_vless.py  vmess.py
src/sub/: __init__.py  updater.py
src/sys/: __init__.py  proxy.py  single_instance.py  vpn.py
src/ui/: __init__.py  app.py  main_window.py  tray.py
src/ui/dialogs/: __init__.py  add_profile.py  edit_group.py  edit_profile.py  profile_vpn_settings.py  settings.py  subscription.py
tests/: test_core_config.py  test_core_context.py  test_core_logging_utils.py  test_core_monitor.py  test_db_config_monitoring.py  test_db_data_store.py  test_db_profiles.py  test_fmt_base.py  test_fmt_stream.py  test_sub_updater.py  test_sys_proxy.py  test_sys_single_instance.py
tools/: leak_test.py  memory_profiler.py
