[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tenga-proxy"
version = "0.5.0"
description = "Клиент прокси с бекэндом sing-box"
readme = "README.md"
authors = [
    {name = "Artem G."}
]
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "idna>=3.11",
    "protobuf>=6.33.1",
    "pycairo>=1.29.0",
    "Pygments>=2.19.2",
    "PyGObject>=3.54.5",
    "PyYAML>=6.0.3",
    "requests>=2.32.5",
    "typing_extensions>=4.15.0",
    "urllib3>=2.5.0",
    "psutil>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "coverage>=7.12.0",
    "ruff>=0.8.0",
    "isort>=5.13.0",
]
build = [
    "pyinstaller>=6.17.0",
    "pyinstaller-hooks-contrib>=2025.10",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "0.5.0"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "RUF001",  # ambiguous unicode characters (false positives for Cyrillic text)
    "ARG001",  # unused-function-argument (common for callback functions)
    "ARG002",  # unused-method-argument (common for interface methods)
    "ARG003",  # unused-class-method-argument
    "E402",  # module-import-not-at-top-of-file (sometimes needed for conditional imports)
    "SIM105",  # suppressible-exception (sometimes intentional)
    "E722",  # bare-except (sometimes necessary for error handling)
    "TC003",  # typing-only-standard-library-import (too strict for runtime usage)
    "TC001",  # typing-only-first-party-import (too strict for runtime usage)
    "RUF012",  # mutable-class-default (common pattern, can be safe)
    "F401",  # unused-import (may be needed for side effects)
    "RET504",  # unnecessary-assign (sometimes improves readability)
    "RUF059",  # unused-unpacked-variable (common when unpacking tuples)
    "SIM108",  # if-else-block-instead-of-if-exp (sometimes more readable)
    "B024",  # abstract-base-class-without-abstract-method (may be intentional)
    "F841",  # unused-variable (may be for debugging or future use)
    "PIE810",  # multiple-starts-ends-with (sometimes more readable)
    "PT018",  # pytest-composite-assertion (pytest style preference)
    "PT028",  # pytest-parameter-with-default-argument (pytest pattern)
    "RUF005",  # collection-literal-concatenation (sometimes more readable)
    "SIM115",  # open-file-with-context-handler (may be intentional)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["src"]
